# code-20240515-chrismitchell

./: .gitignore  Interview Analysis Molecule.tsv  main.py  pyproject.toml  task.md
tests/: test_data_cleaning.py
vamstar/: data_cleaning.py
