[tool.poetry]
name = "vamstar"
version = "0.1.0"
description = ""
authors = ["Rawlsy-py <christopher_m_mitchell@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
